--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -5,9 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="./app.js"></script>
+  <script src="./app.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Tic Tac Toe</h1>
+    <div class="board">
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+      <div class="cell" data-cell=""></div>
+    </div>
+    <button id="restart-button">Restart Game</button>
+  </div>
+  <dialog id="messages-dialog">
+    <p class="message-box"></p>
+    <button id="close-dialog">New Game</button>
+  </dialog>
 </body>
 </html>
