Add functionality to display rounds

--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -8,6 +8,7 @@
   <script src="./app.js" defer></script>
 </head>
 <body>
+  <div class="round-messages"></div>
   <div class="container">
     <h1>Tic Tac Toe</h1>
     <div class="board">
